<resources>
    <string name="sip_settings">SIP settings</string>
    <string name="sip_accounts">SIP accounts</string>
    <string name="sip_accounts_title">Accounts</string>
    <string name="sip_receive_calls">Receive incoming calls</string>
    <string name="sip_receive_calls_summary">Uses more battery life</string>
    <string name="sip_call_options_title">Use SIP calling</string>
    <string name="sip_call_options_wifi_only_title">Use SIP calling (WLAN only)</string>
    <string name="sip_call_options_entry_1">For all calls when data network is available</string>
    <string name="sip_call_options_entry_2">Only for SIP calls</string>
    <string name="sip_call_options_wifi_only_entry_1">For all calls</string>
    <string name="add_sip_account">Add account</string>
    <string name="remove_sip_account">Remove account</string>
    <string name="sip_account_list">SIP accounts</string>
    <string name="saving_account">Saving the account…</string>
    <string name="removing_account">Removing the account…</string>
    <string name="sip_menu_save">Save</string>
    <string name="sip_menu_discard">Discard</string>
    <string name="alert_dialog_close">Close the profile</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="close_profile">Close</string>
    <string name="registration_status_checking_status">Checking status...</string>
    <string name="registration_status_registering">Registering…</string>
    <string name="registration_status_still_trying">Still trying…</string>
    <string name="registration_status_not_receiving">Not receiving calls.</string>
    <string name="registration_status_no_data">Account registration stopped because there is no Internet connection.</string>
    <string name="registration_status_no_wifi_data">Account registration stopped because there is no WLAN connection.</string>
    <string name="registration_status_not_running">Account registration unsuccessful.</string>
    <string name="registration_status_done">Receiving calls.</string>
    <string name="registration_status_failed_try_later">Account registration unsuccessful: (%s); will try later</string>
    <string name="registration_status_invalid_credentials">Account registration unsuccessful: Incorrect username or password.</string>
    <string name="registration_status_server_unreachable">Account registration unsuccessful: Check the server name.</string>
    <string name="third_party_account_summary">This account is currently in use by the %s app.</string>
    <string name="sip_edit_title">SIP account details</string>
    <string name="sip_edit_new_title">SIP account details</string>
    <string name="domain_address_title">Server</string>
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="display_name_title">Display name</string>
    <string name="proxy_address_title">Outbound proxy address</string>
    <string name="port_title">Port number</string>
    <string name="transport_title">Transport type</string>
    <string name="send_keepalive_title">Send keep-alive</string>
    <string name="advanced_settings">Optional settings</string>
    <string name="auth_username_title">Authentication username</string>
    <string name="auth_username_summary">Username used for authentication</string>
    <string name="default_preference_summary">&lt;Not set></string>
    <string name="display_name_summary">&lt;Same as username></string>
    <string name="optional_summary">&lt;Optional></string>
    <string name="default_port">5060</string>
    <string name="default_transport">UDP</string>
    <string name="advanced_settings_show">▷ Touch to show all</string>
    <string name="advanced_settings_hide">▽ Touch to hide all</string>
    <string name="empty_alert">"%s is required and can't be left blank."</string>
    <string name="not_a_valid_port">Port number should be within 1000 and 65534.</string>
    <string name="no_internet_available">To place a SIP call, check your Internet connection first.</string>
    <string name="no_wifi_available">You need to be connected to a WLAN network for SIP calls (use the Wireless &amp; Network settings).</string>
    <string name="no_voip">SIP calling not supported</string>
    <string name="sip_system_decide">Automatic</string>
    <string name="sip_always_send_keepalive">Always send</string>
    <string name="sip_always">SIP_ALWAYS</string>
    <string name="sip_address_only">SIP_ADDRESS_ONLY</string>
    <string name="domain_address">SipDomain</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="display_name">DisplayName</string>
    <string name="proxy_address">ProxyAddress</string>
    <string name="port">Port</string>
    <string name="transport">Protocol</string>
    <string name="send_keepalive">SendKeepAlive</string>
    <string name="advanced_settings_container">advanced settings container</string>
    <string name="auth_username">AuthUserName</string>
    <string name="sip_connection_service_label">Built-in SIP calling</string>
    <string name="dialpad_0_labels" />
    <string name="dialpad_1_labels" />
    <string name="dialpad_2_labels" />
    <string name="dialpad_3_labels" />
    <string name="dialpad_4_labels" />
    <string name="dialpad_5_labels" />
    <string name="dialpad_6_labels" />
    <string name="dialpad_7_labels" />
    <string name="dialpad_8_labels" />
    <string name="dialpad_9_labels" />
    <string name="dialpad_star_labels" />
    <string name="dialpad_pound_labels" />
    <string name="callFailed_non_selected_user_clearing" />
    <string name="dialpad_star_number">*</string>
    <string name="dialpad_pound_number">\#</string>
    <string name="dialpad_0_letters">+</string>
    <string name="dialpad_1_letters" />
    <string name="dialpad_2_letters">ABC</string>
    <string name="dialpad_3_letters">DEF</string>
    <string name="dialpad_4_letters">GHI</string>
    <string name="dialpad_5_letters">JKL</string>
    <string name="dialpad_6_letters">MNO</string>
    <string name="dialpad_7_letters">PQRS</string>
    <string name="dialpad_8_letters">TUV</string>
    <string name="dialpad_9_letters">WXYZ</string>
    <string name="dialpad_star_letters" />
    <string name="dialpad_pound_letters" />
    <string name="description_dialpad_overflow">More options</string>
    <string name="description_delete_button">backspace</string>
    <string name="description_image_button_plus">plus</string>
    <string name="description_voicemail_button">voicemail</string>
    <string name="default_notification_description">Default sound (%1$s)</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response, timed out</string>
    <string name="callFailed_server_unreachable">Server unreachable</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Out‑of‑network call</string>
    <string name="callFailed_server_error">Server error. Try again later.</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM or SIM error</string>
    <string name="callFailed_outOfService">Cellular network not available</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_dialToUssd">DIAL request modified to USSD request.</string>
    <string name="callFailed_dialToSs">DIAL request modified to SS request.</string>
    <string name="callFailed_dialToDial">DIAL request modified to DIAL with different number.</string>
    <string name="callFailed_cb_enabled">"Can't make outgoing calls while call barring is on."</string>
    <string name="callFailed_dsac_restricted">Calls restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls restricted by access control.</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="mobile_networks">Cellular network settings</string>
    <string name="data_enabled">Mobile data</string>
    <string name="data_enable_summary">Allow this device to use mobile data</string>
    <string name="roaming_disable">Connect to data services when roaming</string>
    <string name="cdma_system_select_title">System select</string>
    <string name="cdma_system_select_summary">Change the CDMA roaming mode</string>
    <string name="cdma_system_select_dialogtitle">System select</string>
    <string name="cdma_lte_data_service">Set up data service</string>
    <string name="always_enable_mms">Always receive MMS</string>
    <string name="always_enable_mms_summary">Receive MMS even when mobile data is off</string>
    <string name="preferred_network_type_title">Preferred network type</string>
    <string name="uplmn_list_setting_title">Preferred networks</string>
    <string name="msim_setting_categery_title">SIM card settings</string>
    <string name="msim_general_setting">Settings</string>
    <string name="msim_default_setting">Default settings</string>
    <string name="msim_pref_title_voice">Dial</string>
    <string name="msim_pref_title_data">Internet</string>
    <string name="international_roaming_setting">Data roaming</string>
    <string name="description_image_button_one">one</string>
    <string name="description_image_button_two">two</string>
    <string name="description_image_button_three">three</string>
    <string name="description_image_button_four">four</string>
    <string name="description_image_button_five">five</string>
    <string name="description_image_button_six">six</string>
    <string name="description_image_button_seven">seven</string>
    <string name="description_image_button_eight">eight</string>
    <string name="description_image_button_nine">nine</string>
    <string name="description_image_button_star">star</string>
    <string name="description_image_button_zero">zero</string>
    <string name="description_image_button_pound">pound</string>
    <string name="volte_switch_title">VoLTE enabled</string>
    <string name="volte_switch_summary">Use VoLTE to improve voice and video call quality</string>
    <string name="preference_data_usage_title">Set data plan</string>
    <string name="preference_data_usage_summary">Set your data plan to control the usage of mobile data</string>
    <string name="sim_service_setting">Mi SIM &amp; Mi Roaming</string>
    <string name="mi_sim_settings_title">Mi SIM</string>
    <string name="mi_sim_settings_summary">Use mobile data without a SIM card</string>
    <string name="sim_roaming_settings_title">Mi Roaming</string>
    <string name="sim_roaming_settings_summary">Connect to mobile data networks while roaming</string>
    <string name="dialpad_zero">0</string>
    <string name="dialpad_one">1</string>
    <string name="dialpad_two">2</string>
    <string name="dialpad_three">3</string>
    <string name="dialpad_four">4</string>
    <string name="dialpad_five">5</string>
    <string name="dialpad_six">6</string>
    <string name="dialpad_seven">7</string>
    <string name="dialpad_eight">8</string>
    <string name="dialpad_nine">9</string>
    <string name="dialpad_abc">ABC</string>
    <string name="dialpad_def">DEF</string>
    <string name="dialpad_ghi">GHI</string>
    <string name="dialpad_jkl">JKL</string>
    <string name="dialpad_mno">MNO</string>
    <string name="dialpad_pqrs">PQRS</string>
    <string name="dialpad_tuv">TUV</string>
    <string name="dialpad_wxyz">WXYZ</string>
</resources>