<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.phone.settings.CdmaSystemSelectListPreference android:entries="@array/cdma_system_select_choices" android:title="@string/cdma_system_select_title" android:key="cdma_system_select_key" android:summary="@string/cdma_system_select_summary" android:dialogTitle="@string/cdma_system_select_dialogtitle" android:entryValues="@array/cdma_system_select_values" />
    <PreferenceScreen android:persistent="false" android:title="@string/apn_settings" android:key="button_apn_key">
        <intent android:targetPackage="com.android.settings" android:action="android.settings.APN_SETTINGS" />
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/preferred_network_type_title" android:key="button_preferred_network_type_key">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.settings.PreferredNetworkTypeListPreference" />
    </PreferenceScreen>
</PreferenceScreen>